--- a/home.html
+++ b/home.html
@@ -108,13 +108,16 @@
             border-radius: 5px;
             /* justify-content: space-around; */
         }
+        .aa{
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
     <div class="lft">
         <img src="ho1.png" style="width: 50%; margin-bottom: 50px;">
         <img src="ho2.png" style="width: 40%;">
-        dashboard
+        <a href="#" class="aa">dashboard</a>
         <img src="ho3.png" style="width: 20%;">
         Insurance
         <img src="ho3.png" style="width: 20%;">
@@ -144,22 +147,22 @@
             </p>
         </div>
         <div class="mright">
-            <a href="#"><button style="background-color: #46f030; color: white;" class="butt">Download Net Famework</button></a>
-            <a href="#"><button style="background-color: #1186fa; color: white;" class="butt">NSDL scan &Crop utility</button><br></a>
-            <a href="#"><button style="background-color: #fa113c; color: white;" class="butt">New PAN  Form-Blank</button></a>
-            <a href="#"><button style="background-color: #2411fa; color: white;" class="butt">correction PAN  Form-Blank</button><br></a>
-            <a href="#"><button style="background-color: #1186fa; color: white;" class="butt">Scanning Software(Make PDF Easily with any scanner)</button><br></a>
-            <a href="#"><button style="background-color: #13f502; color: white;" class="butt">Anydesk</button></a>
-            <a href="#"><button style="background-color: #fa113c; color: white;" class="butt">LIst of accept initials</button></a>
-            <a href="#"><button style="background-color: #f5ed02; color: white;" class="butt">annexture A</button><br></a>
-            <a href="#"><button style="background-color: #13f502; color: white;" class="butt">Win RAR</button></a>
-            <a href="#"><button style="background-color: #f5ed02; color: white;" class="butt">Demo correction form</button><br></a>
-            <a href="#"><button style="background-color: #1186fa; color: white;" class="butt">Demo New PAN form(Minor)</button></a>
-            <a href="#"><button style="background-color: #858481; color: white;" class="butt">Demo new PAN form</button><br></a>
+            <a href="https://www.microsoft.com/en-us/download/confirmation.aspx?id=30653" target="_blank"><button style="background-color: #46f030; color: white;" class="butt">Download Net Famework</button></a>
+            <a href="https://drive.google.com/file/d/1QsY6iW_vEzSy56zhJCUeS3RCfVMDc46w/view" target="_blank"><button style="background-color: #1186fa; color: white;" class="butt">NSDL scan &Crop utility</button><br></a>
+            <a href="Form_49A.pdf" download="" target="_blank"><button style="background-color: #fa113c; color: white;" class="butt">New PAN  Form-Blank</button></a>
+            <a href="CSF_Form_Updated (1).pdf" target="_blank"><button style="background-color: #2411fa; color: white;" class="butt">correction PAN  Form-Blank</button><br></a>
+            <a href="naps2-6.1.2-setup.exe" download=""><button style="background-color: #1186fa; color: white;" class="butt">Scanning Software(Make PDF Easily with any scanner)</button><br></a>
+            <a href="AnyDesk (1).exe"><button style="background-color: #13f502; color: white;" class="butt">Anydesk</button></a>
+            <a href="Accepted Initials.pdf" target="_blank"><button style="background-color: #fa113c; color: white;" class="butt">LIst of accept initials</button></a>
+            <a href="Annexure A.pdf" download="" target="_blank"><button style="background-color: #f5ed02; color: white;" class="butt">annexture A</button><br></a>
+            <a href="https://www.win-rar.com/predownload.html?&f=wrar590.exe&spV=true&subD=true&L=0" target="_blank"><button style="background-color: #13f502; color: white;" class="butt">Win RAR</button></a>
+            <a href="Demo Filled Correction OR Re-issue Form.pdf" download="" target="_blank"><button style="background-color: #f5ed02; color: white;" class="butt">Demo correction form</button><br></a>
+            <a href="Demo Filled New PAN 49-A For Minors.pdf" target="_blank" download=""><button style="background-color: #1186fa; color: white;" class="butt">Demo New PAN form(Minor)</button></a>
+            <a href="Demo Filled New PAN 49-A.pdf" target="_blank" download=""><button style="background-color: #858481; color: white;" class="butt">Demo new PAN form</button><br></a>
             <a href="#"><button style="background-color: #f5ed02; color: white;" class="butt">How to attest Thumb impressions</button><br></a>
-            <a href="#"><button style="background-color: #858481; color: white;" class="butt">How to dispatch Hardcopies</button><br></a>
-            <a href="#"><button style="background-color: #bfbfba; color: white;" class="butt">How to sigh on PAN form</button><br></a>
-            <a href="#"><button style="background-color: #a1fc9d; color: white;" class="butt">Sample filled New PAN form</button><br></a>
+            <a href="How To Despatch HardCopies.pdf" target="_blank" download=""><button style="background-color: #858481; color: white;" class="butt">How to dispatch Hardcopies</button><br></a>
+            <a href="How To Sign on PAN Form.pdf" target="_blank" download=""><button style="background-color: #bfbfba; color: white;" class="butt">How to sigh on PAN form</button><br></a>
+            <a href="Sample Filled New PAN 49-A.pdf" target="_blank" download=""><button style="background-color: #a1fc9d; color: white;" class="butt">Sample filled New PAN form</button><br></a>
         </div><br>
         <div class="tag">
             <a href="#"><button style="background-color: #1186fa; color: white;" class="butt">Files provided by Admin</button></a>
@@ -203,7 +206,7 @@
             <div class="b1" style="background-color: #9e2030;">
                 NSDL PAN TRACK
                 <a href="#"><button>Submit</button></a>
-                <a href="#"><button>Acknowledgement</button></a>
+                <input type="text" placeholder="Acknowledgement number" >
             </div>
         </div>
     </div>
